# FastServices2.0

./: .gitignore  README.md  add_date_of_birth_migration.sql  createSchema.sql  package-lock.json  package.json  schema-demo-2.mwb  schema-demo-definitivo.mwb  schema-demo-definitivo.mwb.bak  schema-demo.mwb
services/: .env.example  .gitignore  Dockerfile.api  docker-compose.yml  pyproject.toml
services/src/: alembic.ini  init_db.py  main.py  settings.py  test_connectivity.py  test_minio_simple.py  test_upload_endpoint.py
services/src/auth/: auth_utils.py
services/src/controllers/: __init__.py  address_controller.py  image_controller.py  llm_controller.py  provider_controller.py  service_request_controller.py  tags_controllers.py  user_controller.py
services/src/database/: database.py
services/src/migrations/: env.py  script.py.mako
services/src/migrations/versions/: README.md  (+20 more)
services/src/models/: Address.py  GeneralResponse.py  Image.py  ProviderHiddenRequest.py  ProviderProfile.py  PushToken.py  ServiceRequest.py  ServiceRequestSchemas.py  Tag.py  Token.py  User.py  __init__.py
services/src/routers/: addresses_router.py  auth_router.py  images_router.py  notifications_router.py  providers_router.py  router.py  service_requests_router.py  users_router.py
services/src/services/: __init__.py  notification_service.py  openai.py  provider_service.py  s3_service.py  service_request_service.py  tag_agent.py  user_service.py  user_service_new.py
services/src/templates/: prompts.py
services/src/utils/: error_handler.py  global_exception_handler.py  log.py
(+157 files in other folders)
